# roctop

./: .gitattributes  .gitignore  .goreleaser.yaml  README.md  adapterinfo_windows.go  adapterinfo_windows_test.go  amdsmi.go  amdsmi_test.go  amdsmipath.go  amdsmipath_test.go  amdsmipath_unix.go  amdsmipath_windows.go  amdsysfs.go  applog.go  data.go  data_test.go  fallback_unix.go  fallback_windows.go  fdinfo.go  go.mod  header.go  help.go  install.sh  logpanel.go  main.go  model.go  nvidia.go  panel.go  pdh_windows.go  pdh_windows_test.go  pdhbackend_windows.go  pdhparse.go  pdhparse_test.go  process.go  procname_test.go  procname_unix.go  procname_windows.go  procstats_unix.go  procstats_windows.go  pyproject.toml  (+6 more)
.github/workflows/: publish.yml  release.yml  test.yml
python/: pyproject.toml
python/roctop/: __main__.py  app.py  render.py
python/roctop/widgets/: header_bar.py  process_table.py
roctop/: __main__.py  data.py  roctop.tcss
roctop/widgets/: gpu_panel.py
testdata/: amdsmi_metric.json  amdsmi_metric_ecc.json  amdsmi_process.json  amdsmi_static.json  pdh_instances.json
