[project]
name = "roctop"
version = "0.1.0"
description = "Terminal UI for real-time AMD GPU monitoring via ROCm"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = ["textual>=0.50.0"]

[project.scripts]
roctop = "roctop.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
